--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@ionic-native/core": "3.12.1",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
+        "angularfire2": "^5.0.0-rc.4",
         "@ionic/storage": "2.0.1",
         "cordova-android": "^6.2.3",
         "cordova-plugin-console": "1.0.5",
@@ -33,6 +34,7 @@
         "ionic-angular": "3.6.0",
         "ionic-plugin-keyboard": "2.2.1",
         "ionicons": "3.0.0",
+        "firebase": "^4.6.2",
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.12"
